--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,13 +1,14 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kalidi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// wrrstudio logo brand color: #363636
+$wrrstudio-gray: #363636
+$wrrstudio-gray-invert: #CFCCD6
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
-$body-color: #333
+$primary: $wrrstudio-gray
+$primary-invert: $wrrstudio-gray-invert
+$body-color: $wrrstudio-gray
+$section-padding: 1rem 1.5rem
 
 .navbar .navbar-menu
   box-shadow:none !important
