fixed about page

--- a/src/components/allmy.sass
+++ b/src/components/allmy.sass
@@ -10,3 +10,8 @@
   padding-top: 30px;
   text-align: center;
   width: 500px;
+
+.store
+  text-align: center
+  font-size: 35px
+  margin-top: 30px
