--- a/src/components/allmy.sass
+++ b/src/components/allmy.sass
@@ -15,3 +15,9 @@
   text-align: center
   font-size: 35px
   margin-top: 30px
+
+.imageStyle
+  margin-top: 20px
+  margin-left: auto 
+  margin-right: auto 
+  display: block
