website conversion to cms

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,9 @@ $primary-invert: $wrrstudio-gray-invert
 $body-color: $wrrstudio-gray
 $section-padding: 1rem 1.5rem
 
+body 
+  background-color: #fafafa
+  
 .navbar .navbar-menu
   box-shadow:none !important
 
