--- a/src/components/allmy.sass
+++ b/src/components/allmy.sass
@@ -16,8 +16,36 @@
   font-size: 35px
   margin-top: 30px
 
-.imageStyle
-  margin-top: 20px
-  margin-left: auto 
-  margin-right: auto 
+.mainHeading
+  text-align: center
+
+.mainDesc
+  text-align: center
+
+.artworkDesc
+  text-align: center
+
+.grid
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex
+  flex-wrap: wrap
+  flex-direction: row
+  justify-content: center
+  width: 100%;
+
+.cell
+  max-width: 500px
+  margin: 10px
+  margin-left: 15px
+  margin-right: 15px
+
+.responsive-image
+  min-width: 350px
+
+.imgDesc
+  text-align: center
   display: block
+
+.footer
+  text-align: center
