--- a/src/components/allmy.sass
+++ b/src/components/allmy.sass
@@ -49,3 +49,25 @@
 
 .footer
   text-align: center
+
+.productName
+  text-align: center
+  margin-top: 10px !important
+
+.buyNow
+  margin-left: auto
+  margin-right: auto
+  display: block
+  height: auto
+  width: auto
+  font-size: 25px
+  padding: 10px
+  border: 2px solid black
+  background-color: #2b2626
+  color: #fefefe
+  font-weight: 700
+  border-radius: 5px;
+
+.buyNow:hover
+  color: papayawhip
+  background-color: #000
